Slight refactor to reduce warnings